# cpp-boilerplate

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .vimrc  .ycm_extra_conf.py  CMakeLists.txt  cfix.sh  cmakeres.sh  compile.sh  run.sh  test.sh
cmake/: clang-cpp-tools.cmake  semicolon-space
doc/: catch  spdlog
src/: main.cpp
test/: CMakeLists.txt  test.cpp
